2010-01-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* BrowserHttpWebAsyncResult.cs: SetComplete: always execute the logic
	on a threadpool thread, and handle any exceptions correctly.

	* BrowserHttpWebRequestInternal.cs: OnAsyncResponseFinished: No need to
	handle any SetComplete exceptions, SetComplete handles them now.

2010-01-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* BrowserHttpWebResponse.cs: Don't throw if there is no Content-Length.

	* BrowserHttpWebRequestInternal.cs: Don't call the progress event
	handler if the content length is 0.

2010-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Override CookieContainer (not to 
	throw NIE) until the client stack is ready.
	* BrowserHttpWebRequestInternal.cs: Override CookieContainer
	(not to throw NIE) until the client stack is ready. Get the 
	request data even when an ObjectDisposedException is thrown.
	Fix for DRT287

2010-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Override CreatorInstance property
	to return WebRequestCreator.BrowserHttp

2010-01-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* BrowserHttpWebRequestInternal.cs: Continue, i.e. do not throw,
	if the request was disposed (closed by the user). Should fix the
	hang on	buildbot control's tests. Add FIXME about cookie support.

2010-01-11  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs, BrowserHttpWebRequestInternal.cs: 
	Do not use a custom delegate (use Action instead). Use 
	InternalWebRequestStreamWrapper instead of the old
	BrowserHttpWebRequestStream
	* BrowserHttpWebRequestStream.cs: Removed. The class has been 
	splitted in two and now resides in System.Net.dll so it can be
	used by WebClient
	* BrowserHttpWebResponse.cs: Use InternalWebResponseStreamWrapper
	instead of the old BrowserHttpWebRequestStream

2009-12-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* BrowserHttpWebRequest.cs: Content-Type is also a bad GET header.
